# Quant-Desk

./: .dockerignore  .env.example  .gitignore  .gitleaksignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  alembic.ini  docker-compose.yml  index.html  pyproject.toml  requirements.txt
.github/workflows/: docker.yml  pages.yml  paper_bots.yml  pylint.yml  security.yml
apps/: __init__.py
apps/api/: __init__.py  main.py
apps/worker/: __init__.py  main.py
bots/: auto_paper_trader.py  auto_paper_trader_crypto.py  exit_manager.py
config/: agents.example.yaml  brokers.example.yaml  crypto_universe.example.yaml  equity_universe.example.yaml  plateau.example.yaml  risk.example.yaml  strategies.example.yaml
dashboard/: app.js  index.html  styles.css
dashboards/: bot_dashboard.html  kalshi_signals.html
data/: kalshi_snapshot.json
docs/: agent-communication.md  agent-permissions-matrix.md  architecture.md  crypto-execution.md  current-state-audit.md  dashboard-guide.md  equity-execution.md  final-implementation-report.md  implementation-plan.md  incident-response.md  live-readiness.md  operations-runbook.md  risk-controls.md
migrations/: env.py
migrations/versions/: 0001_initial_schema.py
notebooks/: Colab_Launcher.ipynb  impact_quant_strategy.ipynb
pine/: crypto_intraday.pine  equity_intraday.pine  long_term_signals.pine
reports/: sample-agent-communication.csv  sample-agent-communication.html  sample-agent-communication.json
research/: SETUP_paper_trader.md
scripts/: create_restricted_live_record.py  emergency_stop.py  fetch_kalshi_snapshot.py  generate_communication_report.py  local_dashboard_server.py  reconcile_accounts.py  run_api.py  run_backtest.py  run_paper.py  run_shadow.py  run_walk_forward.py  run_workers.py  verify_live_disabled.py
src/quant_trade_desk/: __init__.py  settings.py
tests/: conftest.py
tests/contract/: test_crypto_signing.py
tests/dashboard/: test_static_dashboard.py
tests/failure_injection/: test_execution_failures.py
tests/integration/: test_api.py
tests/security/: test_tradingview_webhook.py
tests/unit/: test_drawdown_plateau_decay.py  test_execution.py  test_kill_switch_and_lots.py  test_messages.py  (+4 more)
(+72 files in other folders)
