[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "quant-trade-desk"
version = "0.2.0"
description = "Fail-closed multi-agent quantitative trading operations desk"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Quant Desk contributors" }]
dependencies = [
  "alembic>=1.13,<2",
  "fastapi>=0.115,<1",
  "httpx>=0.27,<1",
  "pydantic>=2.8,<3",
  "PyYAML>=6.0,<7",
  "SQLAlchemy>=2.0,<3",
  "uvicorn[standard]>=0.30,<1",
  "cryptography>=48.0.1,<49",
  "redis>=5,<7",
]

[project.optional-dependencies]
research = [
  "alpaca-py>=0.20",
  "jupyter>=1.0",
  "matplotlib>=3.7",
  "nbformat>=5.9",
  "numpy>=1.24",
  "pandas>=2.0",
  "scikit-learn>=1.3",
  "yfinance>=0.2.40",
]
dev = [
  "mypy>=1.11,<2",
  "pytest>=9.0.3,<10",
  "pytest-asyncio>=1.2,<2",
  "pytest-cov>=5,<7",
  "ruff>=0.6,<1",
  "types-PyYAML>=6.0",
]

[project.scripts]
quant-desk-api = "quant_trade_desk.api.app:run"
quant-desk-report = "quant_trade_desk.reports.communication:main"

[tool.hatch.build.targets.wheel]
packages = ["src/quant_trade_desk"]

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers"
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
  "integration: local integration tests",
  "failure_injection: deterministic dependency-failure tests",
  "contract: broker and message contract tests",
]

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = [
  "notebooks",
  "bots",
  "scripts/fetch_kalshi_snapshot.py",
  "scripts/local_dashboard_server.py",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S", "RUF"]
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S105", "S106"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["quant_trade_desk"]
exclude = [
  "notebooks",
  "bots",
  "scripts/fetch_kalshi_snapshot.py",
  "scripts/local_dashboard_server.py",
]
plugins = ["pydantic.mypy"]

[tool.coverage.run]
branch = true
source = ["quant_trade_desk"]

[tool.coverage.report]
show_missing = true
skip_covered = true
